# django-bookmarks

./: .env.example  .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
bookmarks/: cert.crt  cert.key  manage.py
bookmarks/account/: admin.py  apps.py  authentication.py  forms.py  models.py  urls.py  views.py
bookmarks/account/migrations/: 0001_initial.py  0002_contact.py
bookmarks/account/static/css/: base.css
bookmarks/account/templates/: base.html
bookmarks/account/templates/account/: dashboard.html  edit.html  login.html  register.html  register_done.html
bookmarks/account/templates/account/user/: detail.html  list.html
bookmarks/account/templates/registration/: logged_out.html  login.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
bookmarks/account/tests/: test_forms.py  test_models.py  test_urls.py  test_views.py
bookmarks/actions/: admin.py  apps.py  models.py
bookmarks/actions/migrations/: 0001_initial.py
bookmarks/bookmarks/: asgi.py  settings.py  urls.py
bookmarks/homepage/: tests.py  urls.py  views.py
bookmarks/homepage/templates/homepage/: homepage.html
bookmarks/images/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
bookmarks/images/migrations/: 0001_initial.py  0002_images_users_like.py
bookmarks/images/templates/images/image/: detail.html
bookmarks/images/tests/: test_forms.py  test_models.py  test_urls.py  test_views.py
